changed positioning of editor elements to prevent overlap

--- a/frontend/map/styles/mailTemplates/template-classes.styl
+++ b/frontend/map/styles/mailTemplates/template-classes.styl
@@ -15,36 +15,39 @@
   margin-top 0.25in
 
 .letter-page-content // content container
-  position absolute
-  left 0.25in
-  top 3.0in
-  width 8.0in
-  height 4.5in
+  padding 1em
+  // position absolute
+  // left 0.25in
+  // top 3.0in
+  // width 8.0in
+  // height 4.5in
 
 .return-address-window
-  position absolute
-  left 0.625in
-  top 0.5in
+  margin 1em
+  // position absolute
+  // left 0.625in
+  // top 0.5in
   width 3.25in
-  height 0.875in
+  // height 0.875in
 
 .return-address-text
-  position absolute
-  left 0.1in
-  top: 0.1in
+  // position absolute
+  // left 0.1in
+  // top: 0.1in
   width 3.05in
-  height 0.675in
+  // height 0.675in
 
 .recipient-address-window
-  position absolute
-  left 0.625in
-  top 1.75in
+  margin 1em
+  // position absolute
+  // left 0.625in
+  // top 1.75in
   width 4.0in
-  height 1.0in
+  // height 1.0in
 
 .recipient-address-text
-  position absolute
-  left 0.1in
-  top 0.1in
+  // position absolute
+  // left 0.1in
+  // top 0.1in
   width 3.80in
-  height 0.8in
+  // height 0.8in
